# SoundWizard

SoundWizard/: CMakeLists.txt  main.cpp
SoundWizard/generators/audiogenerator/: CMakeLists.txt
SoundWizard/generators/audiogenerator/harmonicgenerator/: CMakeLists.txt  unittest.cmake
SoundWizard/generators/audiogenerator/harmonicgenerator/include/harmonicgenerator/: harmgenerator.h
SoundWizard/generators/audiogenerator/harmonicgenerator/src/: harmgenerator.cpp
SoundWizard/generators/audiogenerator/harmonicgenerator/test/: harmgen.cpp
SoundWizard/generators/audiogenerator/harmonicgenerator/test/config/: conf.cmake
SoundWizard/generators/audiogenerator/include/audiogenerator/: audiogenerator.h
SoundWizard/generators/igenerator/: CMakeLists.txt
SoundWizard/generators/igenerator/include/igenerator/: igenerator.h
SoundWizard/genfactory/: CMakeLists.txt
SoundWizard/genfactory/include/genfactory/: genfactory.h
SoundWizard/genfactory/src/: genfactory.cpp
SoundWizard/genfactory/test/: genfactory_test.cpp
SoundWizard/parameters/harmparameters/: CMakeLists.txt
SoundWizard/parameters/harmparameters/include/harmparameters/: harmparameters.h
SoundWizard/parameters/harmparameters/src/: harmparameters.cpp
SoundWizard/parameters/iparameters/: CMakeLists.txt
SoundWizard/parameters/iparameters/include/iparameters/: iparameters.h
SoundWizard/parameters/iparameters/src/: iparameters.cpp
SoundWizard/parser/readfromfile/: CMakeLists.txt
SoundWizard/parser/readfromfile/include/readfromfile/: readfromfile.h
SoundWizard/parser/readfromfile/src/: readfromfile.cpp
SoundWizard/parser/readfromfile/test/: parser_read_test.cpp
SoundWizard/parser/readfromfile/test/config/: TestInterpreting.txt  TestInterpreting2.txt  conf.cmake
SoundWizard/parser/writetofile/: CMakeLists.txt
SoundWizard/parser/writetofile/include/writetofile/: writetofile.h
SoundWizard/parser/writetofile/src/: writetofile.cpp
SoundWizard/parser/writetofile/test/: example_test.cpp
SoundWizard/signal/: CMakeLists.txt
SoundWizard/signal/include/signal/: signal.h
SoundWizard/signal/src/: signal.cpp
SoundWizard/signals/audiosignal/: CMakeLists.txt
SoundWizard/signals/audiosignal/include/audiosignal/: audiosignal.h
SoundWizard/signals/audiosignal/src/: audiosignal.cpp
SoundWizard/signals/isignal/: CMakeLists.txt
SoundWizard/signals/isignal/include/isignal/: isignal.h
SoundWizard/sound/: CMakeLists.txt  unittest.cmake
SoundWizard/sound/include/sound/: sound.h
SoundWizard/sound/src/: sound.cpp
SoundWizard/sound/test/: example_test.cpp
SoundWizard/sound/test/config/: TestInterpreting3.txt  conf.cmake
build-isignal-Desktop_Qt_5_14_2_MinGW_64_bit-Debu_kakai_suda/: CMakeCache.txt  Makefile  cmake_install.cmake  isignal.cbp
build-soundwizards_main_shiting_bucket/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  info.txt  soundwizard.cbp
build-soundwizards_main_shiting_bucket/generators/audiogenerator/: CTestTestfile.cmake  Makefile  audiogenerator.cbp  cmake_install.cmake
build-soundwizards_main_shiting_bucket/generators/igenerator/: CTestTestfile.cmake.tmp92686  Makefile  cmake_install.cmake  igenerator.cbp
build-soundwizards_main_shiting_bucket/genfactory/: CTestTestfile.cmake  Makefile  cmake_install.cmake  genfactory.cbp
build-soundwizards_main_shiting_bucket/googletests/: Makefile  cmake_install.cmake  unittest.cbp
build-soundwizards_main_shiting_bucket/googletests/gtest/: Makefile  cmake_install.cmake  gtest.cbp
build-soundwizards_main_shiting_bucket/parameters/harmparameters/: CTestTestfile.cmake  Makefile  cmake_install.cmake  harmparameters.cbp
build-soundwizards_main_shiting_bucket/parameters/iparameters/: CTestTestfile.cmake  Makefile  cmake_install.cmake  iparameters.cbp
build-soundwizards_main_shiting_bucket/parser/readfromfile/: CTestTestfile.cmake  Makefile  cmake_install.cmake  readfromfile.cbp
build-soundwizards_main_shiting_bucket/parser/writetofile/: CTestTestfile.cmake  Makefile  cmake_install.cmake  writetofile.cbp
build-soundwizards_main_shiting_bucket/signal/: CTestTestfile.cmake  Makefile  cmake_install.cmake  signal.cbp
build-soundwizards_main_shiting_bucket/signals/audiosignal/: CTestTestfile.cmake  Makefile  audiosignal.cbp  cmake_install.cmake
build-soundwizards_main_shiting_bucket/sound/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sound.cbp
build_audiosignal_kakai_suda/: CMakeCache.txt  Makefile  audiosignal.cbp  cmake_install.cmake
(+78 files in other folders)
